Fix spacing in <nav>

--- a/basic.css
+++ b/basic.css
@@ -50,7 +50,7 @@ nav>a, nav>span {
     min-width: 1.5rem;
     text-align: center;
     padding: 0.25rem;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0.5rem 0;
     border-radius: 4px;
 }
 
